@@ -1,3 +1,7 @@
+2013-11-26  Cedric Bail
+
+	* Evas: Allow fuzziness on the texture format returned by GL.
+
 2013-11-25  Tom Hacohen
 
         * Evas textblock: Fixed wrapping of lines ending with whites.
